<resources>
    <string name="app_name">Campus BuyBack</string>

    <!--Textview String Constant-->
    <string name="tv_str_copyright">Copyright  &#169; by Progragon Technolabs.\nAll Rights Reserved.</string>
    <string name="tv_login_header"><b>Hi.</b> \nLet\'s get Started</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="proceed">PROCEED</string>
    <string name="otp_instruction">We have sent a 6 digit OTP to your registered mobile number +91 82******47. \n\nPlease enter the OTP below to continue.</string>
    <string name="tv_str_resend_code"><b>RESEND CODE</b></string>

    <!--Bottom Navigation Menu-->
    <string name="menu_home">Home</string>
    <string name="menu_post">Posts</string>
    <string name="menu_wishlist">Wishlist</string>
    <string name="menu_profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_shopping_cart">My Cart</string>
    <string name="verify_now">Verify Now</string>
    <string name="enter_6_digit_code">Enter 6 - Digit code</string>
    <string name="verification">Verification…</string>
    <string name="rating_value">%1$s &#10026;</string>
</resources>
