<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_bottom_home"
        android:icon="@drawable/icon1_selector"
        android:title="@string/menu_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_wishlist"
        android:icon="@drawable/icon2_selector"
        android:title="@string/menu_wishlist"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_posts"
        android:icon="@drawable/icon3_selector"
        android:title="@string/menu_post"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_cart"
        android:icon="@drawable/icon4_selector"
        android:title="@string/menu_shopping_cart"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_bottom_profile"
        android:icon="@drawable/icon5_selector"
        android:title="@string/menu_profile"
        app:showAsAction="ifRoom" />
</menu>