<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="handler"
            type="com.campbuyback.buyback.handler.OTPActivityHandler" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_20dp"
        tools:context=".activity.OTPActivity">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_verification_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40dp"
            android:gravity="start"
            android:padding="@dimen/_8dp"
            android:text="@string/verification"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_otp_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8dp"
            android:layout_marginTop="@dimen/_8dp"
            android:fontFamily="@font/googlesans_medium"
            android:gravity="start"
            android:padding="@dimen/_8dp"
            android:text="@string/otp_instruction"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/_15sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_verification_label" />

        <TextView
            android:id="@+id/tv_otp_mobile_number"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:textSize="@dimen/_30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_instruction"
            tools:text="+91 82******47" />

        <TextView
            android:id="@+id/tv_otp_enter_6_digit"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:text="@string/enter_6_digit_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_mobile_number" />

        <LinearLayout
            android:id="@+id/ll_otp_edittexts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_otp_enter_6_digit">

            <EditText
                android:id="@+id/edt_otp_d1"
                android:layout_width="@dimen/_60dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:textSize="@dimen/_20sp"
                android:theme="@style/TextInputEditTextStyle"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/edt_otp_d2"
                android:layout_width="@dimen/_60dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:textSize="@dimen/_20sp"
                android:theme="@style/TextInputEditTextStyle"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/edt_otp_d3"
                android:layout_width="@dimen/_60dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:textSize="@dimen/_20sp"
                android:theme="@style/TextInputEditTextStyle"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/edt_otp_d4"
                android:layout_width="@dimen/_60dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:textSize="@dimen/_20sp"
                android:theme="@style/TextInputEditTextStyle"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/edt_otp_d5"
                android:layout_width="@dimen/_60dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:textSize="@dimen/_20sp"
                android:theme="@style/TextInputEditTextStyle"
                tools:ignore="Autofill,LabelFor" />

            <EditText
                android:id="@+id/edt_otp_d6"
                android:layout_width="@dimen/_60dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8dp"
                android:layout_weight="1"
                android:gravity="center|center_horizontal|center_vertical"
                android:inputType="numberSigned"
                android:maxLength="1"
                android:textSize="@dimen/_20sp"
                android:theme="@style/TextInputEditTextStyle"
                tools:ignore="Autofill,LabelFor" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_otp_resend_code"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_8dp"
            android:text="@string/tv_str_resend_code"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ll_otp_edittexts" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_otp_submit"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_50dp"
            android:layout_marginBottom="@dimen/_20dp"
            android:background="@color/colorAccent"
            android:onClick="@{handler::onVerifyButtonClick}"
            android:paddingStart="@dimen/_100dp"
            android:paddingEnd="@dimen/_100dp"
            android:text="@string/verify_now"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>